HB-4172 - Fix for too much margin in NPASignUp when expanding offers

--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -10,7 +10,7 @@
     text-align: center
 
   +e(content)
-    margin: auto
+    margin: 0 auto
     max-width: 36rem
 
   +e(fields)
